--- a/src/Home.css
+++ b/src/Home.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 60px;
   }
 
 .content-container-body {
