--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -10,15 +10,15 @@
   
   .navbar ul {
     list-style: none;
-    padding: 20;
-    font-size: 2rem;
+    padding: 20px;
+    font-size: 3rem;
   }
   
   .navbar ul li {
     display: inline-block;
     position: relative;
-    padding-left: 25px;
-    margin-right: 70px;
+    padding-left: 35px;
+    margin-right: 90px;
   }
   
   .navbar ul li::before {
@@ -33,10 +33,6 @@
     background-size: cover;
   }
   
-  .navbar li {
-    margin-right: 10px;
-  }
-  
   .navbar a {
     text-decoration: underline;
     color: white;
@@ -47,16 +43,3 @@
   border: none;
   padding: 0;
 }
-
-/* .squiggle-shape {
-    position: absolute;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    line-height: 10;
-    fill: rgba(0, 0, 0, 0.088);
-    min-width: 4096px;
-} */
-
-/* set break points for mobile view */
-
